Added seeder and logger for testing many to many.

--- a/SamuraiApp.Data/SamuraiApp.Data.csproj
+++ b/SamuraiApp.Data/SamuraiApp.Data.csproj
@@ -13,4 +13,9 @@
     <ProjectReference Include="..\SamuraiApp.Domain\SamuraiApp.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.Extensions.Logging.Console">
+      <HintPath>..\..\..\..\..\usr\local\share\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.logging.console\2.2.0\lib\netstandard2.0\Microsoft.Extensions.Logging.Console.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
