--- a/SamuraiApp.Web/appsettings.json
+++ b/SamuraiApp.Web/appsettings.json
@@ -6,6 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SamuraiConnection": "Server=(localdb)\\mssqllocaldb;Database=SamuraiDbContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SamuraiConnection": "Server=(localdb)\\mssqllocaldb;Database=SamuraiDbContext;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "SamuraiConnectionMac": "Data Source=localhost;Initial Catalog=SamuraiDb;User ID=sa;Password=[iatgoat42]"
   }
-  }
+}
